# zkvm-amaci

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
configs/: cargo-risc0-native-patches.toml  cargo-sp1-native-patches.toml
crates/baby-jubjub/: Cargo.toml  README.md  REFACTOR_SUMMARY.md
crates/baby-jubjub/examples/: basic_operations.rs
crates/baby-jubjub/src/: constants.rs  error.rs  lib.rs
crates/cosmwasm-amaci-round/: Cargo.toml
crates/cosmwasm-amaci-round/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
crates/cosmwasm-sp1-verifier/: Cargo.toml
crates/cosmwasm-sp1-verifier/src/: contract.rs  error.rs  lib.rs  msg.rs
crates/eddsa-poseidon/: COMPATIBILITY_ISSUE.md  Cargo.toml  README.md
crates/eddsa-poseidon/examples/: blake512_hash_test.rs  complete.rs
crates/eddsa-poseidon/src/: eddsa.rs  lib.rs  types.rs  utils.rs
crates/maci-crypto/: Cargo.toml  README.md
crates/maci-crypto/examples/: README.md  basic_usage.rs  gen_deactivate_root.rs  keypair_ecdh.rs  keys_and_ecdh.rs  merkle_tree.rs  poseidon_hashing.rs
crates/maci-crypto/src/: constants.rs  error.rs  hashing.rs  keypair.rs  keys.rs  lib.rs  pack.rs  rerandomize.rs  tree.rs  utils.rs
crates/proof-core/: Cargo.toml
crates/proof-core/src/: codec.rs  crypto.rs  error.rs  execute.rs  field.rs  hash_backend.rs  lib.rs  merkle.rs  native_types.rs  packing.rs  public_output.rs  round_fixture.rs  sample_inputs.rs  types.rs
crates/proof-core/src/circuits/: add_new_key.rs  mod.rs  process_deactivate.rs  process_messages.rs  tally_votes.rs
crates/proof-core/tests/: core_smoke.rs  operator_golden.rs
crates/proof-risc0-guest/: Cargo.toml
crates/proof-risc0-guest/src/: main.rs
crates/proof-risc0-host/: Cargo.toml
crates/proof-risc0-host/src/: main.rs
crates/proof-risc0-methods/: Cargo.toml  build.rs
crates/proof-sp1-host/: Cargo.toml  build.rs
crates/proof-sp1-host/src/: main.rs
crates/proof-sp1-program/: Cargo.toml
crates/proof-sp1-program/src/: main.rs
docs/: amaci_round_e2e_report_20260629.md  circom_to_rust_migration_map.md  cosmwasm_round_e2e.md  cosmwasm_sp1_verifier.md  risc0_proving_runbook.md  risc0_sp1_adapter_boundary.md  sp1_pre_aggregation_optimization_plan.md  sp1_proving_runbook.md  testing_plan.md  zkvm_architecture.md  zkvm_optimization_notes.md
fixtures/: round-e2e.five-signup.example.json  round-e2e.local.example.json
fixtures/five-signup-round/: five-signup-add-new-key.input.json  five-signup-add-new-key.public.json  five-signup-process-deactivate.input.json  five-signup-process-deactivate.public.json  five-signup-process-messages-full.input.json  five-signup-process-messages-full.public.json  five-signup-tally-0.input.json  five-signup-tally-0.public.json  five-signup-tally-1.input.json  five-signup-tally-1.public.json  manifest.json  round.json
patches/blake/: Cargo.toml
patches/blake/src/: lib.rs
scripts/: build_cosmwasm_contract.sh  generate_golden.ts  make_cosmwasm_sp1_compressed_msg.sh  run_bench.sh  run_cosmwasm_round_e2e.mjs  run_five_signup_sp1_compressed.sh  run_sp1_profile_suite.sh
tests/golden/: add_new_key_2_valid.json  process_deactivate_2_5_valid.json
