[workspace]
members = [
    "crates/baby-jubjub",
    "crates/eddsa-poseidon",
    "crates/maci-crypto",
    "crates/proof-core",
    "crates/proof-risc0-host",
    "crates/proof-risc0-guest",
    "crates/proof-risc0-methods",
    "crates/proof-sp1-program",
]
resolver = "2"

# RISC Zero guests are expensive to build without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[patch.crates-io]
blake = { path = "patches/blake" }
