[workspace]
members = [
    "crates/proof-core",
    "crates/proof-risc0-host",
    "crates/proof-risc0-guest",
    "crates/proof-risc0-methods",
    "crates/proof-sp1-host",
    "crates/proof-sp1-program",
    "crates/cosmwasm-sp1-verifier",
    "crates/cosmwasm-amaci-round",
]
resolver = "2"

# RISC Zero guests are expensive to build without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.contract]
inherits = "release"
debug = 0
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "symbols"
