[package]
name = "baby-jubjub"
version = "0.1.0"
edition = "2021"

[dependencies]
# Arkworks dependencies for elliptic curves
ark-ec = "0.5"
ark-ff = "0.5"
ark-bn254 = "0.5"
ark-ed-on-bn254 = "0.5"

# Big integer support
num-bigint = "0.4"
num-traits = "0.2"

# Lazy static initialization
once_cell = "1.19"

# Random number generation
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"

[[example]]
name = "basic_operations"
path = "examples/basic_operations.rs"

