[package]
name = "amaci-cosmwasm-round"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.2.0"
getrandom = { version = "0.2", features = ["custom"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
sp1-verifier = { version = "=6.3.0", default-features = false }
thiserror = "1.0"
