[package]
name = "amaci-proof-core"
version = "0.1.0"
edition = "2021"

[dependencies]
maci-crypto = { path = "../maci-crypto" }
baby-jubjub = { path = "../baby-jubjub" }
eddsa-poseidon = { path = "../eddsa-poseidon" }
ark-bn254 = "0.5"
ark-ff = "0.5"
ed25519-dalek = { version = "2.2", optional = true }
light-poseidon = "0.4"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"], optional = true }
# Cargo 1.79 cannot parse zeroize_derive 1.5.0's edition-2024 manifest.
# Pin the transitive macro crate through the workspace resolution.
zeroize_derive = "=1.4.2"

[features]
default = []
zkvm-native-crypto = ["dep:ed25519-dalek", "dep:x25519-dalek"]

[dev-dependencies]
serde_json = "1.0"
