[package]
name = "amaci-proof-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "2.2"
num-traits = "0.2"
ruint = { version = "1.18", default-features = false, features = ["alloc", "serde", "num-traits"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
# Cargo 1.79 cannot parse zeroize_derive 1.5.0's edition-2024 manifest.
# Pin the transitive macro crate through the workspace resolution.
zeroize_derive = "=1.4.2"

[dev-dependencies]
serde_json = "1.0"
