[package]
name = "amaci-proof-risc0-host"
version = "0.1.0"
edition = "2021"

[dependencies]
amaci-proof-core = { path = "../proof-core" }
amaci-proof-risc0-methods = { path = "../proof-risc0-methods" }
maci-crypto = { path = "../maci-crypto" }
bincode = "1.3"
num-bigint = { version = "0.4", features = ["serde"] }
risc0-zkvm = { version = "=3.0.5", default-features = false, features = ["prove"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
