[package]
name = "amaci-proof-sp1-host"
version = "0.1.0"
edition = "2021"

[dependencies]
amaci-proof-core = { path = "../proof-core" }
maci-crypto = { path = "../maci-crypto" }
num-bigint = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
sp1-sdk = { version = "=6.3.0", features = ["blocking"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
sp1-build = "=6.3.0"
