[package]
name = "amaci-proof-sp1-host"
version = "0.1.0"
edition = "2021"

[dependencies]
amaci-proof-core = { path = "../proof-core" }
bincode = "1.3"
serde_json = "1.0"
sp1-sdk = { version = "=6.3.0", features = ["blocking"] }
sp1-verifier = "=6.3.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
sp1-build = "=6.3.0"
